<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <AutoCompleteTextView
            android:id="@+id/searchBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/search_box"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true"/>
        <Button
            android:id="@+id/watch_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/watch_stop"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/watch_log"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/watch_stop"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/line_explain"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="120dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:text="@string/title_name"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="85dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:text="@string/title_change"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="85dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:text="@string/title_price"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:text="@string/title_advise"/>
            </RelativeLayout>
        </LinearLayout>

        <ListView
            android:id="@+id/lineList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="#00000000"/>
    </LinearLayout>
</TableLayout>